--- a/css/index.css
+++ b/css/index.css
@@ -55,11 +55,18 @@
 	width:500px;
 	height:10px;
 	margin:50px auto;
+	cursor: pointer;
 }
 .tab div{
 	width:50px;
 	height:10px;
 	float: left;
+	overflow: hidden;
+}
+.tab div p{
+	text-align: center;
+	margin:10px 0;
+	font:bolder 12px Arial;
 }
 .all{
 	background-color:#c0f;
