--- a/css/index.css
+++ b/css/index.css
@@ -1,210 +1,185 @@
-body {
+* {
 	font-family: 'microsoft yahei';
 	box-sizing: border-box;
+}
+body {
 	margin:0;
-	overflow: hidden;
 }
-#curtain{
-	width:100%;
-	height:100%;
-	position:fixed;
-	top:0;
-	left:0;
-	z-index:999;
+/*----menu face----*/
+#menu{
+	margin: 50px auto;
+	width: 880px;
+	height: 560px;
+}
+.item{
+	position: relative;
+	width:80px;
+	height:80px;
+	float: left;
+
+	opacity:0;
+	-webkit-transition: all 1s ease-out;
+}
+.item:hover {
+	opacity:1;
+}
+.item:active {
+	-webkit-transform:scale(2);
+}
+.line,.line2{
+	position: absolute;
+	width: 0px;
+	height: 1px;
+	background: rgba(123, 231, 2, 1);
+}
+.item .tip{
+	left: 40px;
+	top: -10px;
+	width: 0px;
+	height: 50px;
+	overflow: hidden;
+	position: absolute;
+	-webkit-animation: tip 0.5s ease-in;
+}
+@-webkit-keyframes tip {
+	0%{
+		width:290px;
+	}
+	100%{
+		width:0px;
+	}
+}
+.item:hover .tip{
+	/*width:290px;*/
+	-webkit-animation: hoverTip 5s infinite ease-in;		
+}
+@-webkit-keyframes hoverTip {
+	0%{
+		width:0px;
+	}
+	6%{
+		width:0px;
+	}
+	14%{
+		width:70px;
+	}
+	20%{
+		width:290px;
+	}
+	80%{
+		width:290px;
+	}
+	100%{
+		width:0px;
+	}
+}
+.item .tip .line{
+	top:50px;
+	left:0px;
+	-webkit-transform: rotate(-45deg);
+	-webkit-transform-origin: left top;
+	width:70px;
+}
+.item .tip .line2{
+	top: 0px;	/*Math.sin(Math.PI*-45/180)*70*/
+	left: 50px;	/*Math.cos(Math.PI*-45/180)*70*/
+	width:200px;
+}
+.item .tip .tipText{
+	left:220px;
+	position: relative;
+}
+.hide {
 	display: none;
 }
-
-/* drop */
-.drop{
-	box-sizing: border-box;	
+/*----items color----*/
+.game{
+	background:rgba(123,23,219,.6);
+	border:1px solid rgba(123,23,219,1);			
 }
-.tip .close.drop {
-	background: rgba(231, 24, 115, .6);
-	border: 1px solid rgba(231, 24, 115, .6);
-}
-.tip .video.drop {			
+.words,.word{
 	background: rgba(251, 186, 0, .6);
-	border: 1px solid rgba(251, 186, 0, .6);
+	border: 1px solid rgba(251, 186, 0, 1);			
 }
-.tip .game.drop {
+.video{
 	background: rgba(0, 153, 204, .6);
-	border: 1px solid rgba(0, 153, 204, .6);
+	border: 1px solid rgba(0, 153, 204, 1);			
 }
-.tip .words.drop {
+.article{
 	background: rgba(153, 204, 0, .6);
-	border: 1px solid rgba(153, 204, 0, .6);
+	border: 1px solid rgba(153, 204, 0, 1);			
+}		
+/*----filter items----*/
+#filter {
+	width: 400px;
+	height: 20px;
+	margin: 0 auto;
 }
-/* article list */
-.tip {
-	width: 100%;
-	height: 100%;
-	position: absolute;
+#filter>label{
+	width:100px;
+	height:20px;
+	float: left;
+
+	-webkit-transform:scale(.8);
+	-webkit-transition: all .5s ease-out;			
+}
+#filter>label:hover{
+	-webkit-transform:scale(1);		
+}
+#filter>label:active{
+	border-width:5px;	
+}
+#filter input {
 	display: none;
 }
-.tip .close {
-	width: 100%;
-	height: 100%;
-	position: absolute;
+.filterItem{
+	opacity: 1;
 }
-#list,#expand {
-	background: rgba(0, 0, 0, .6);
-	color: white;
-	width: 30%;
-	position: absolute;
-	height: 100%;
-	box-shadow: inset 5px 0px 20px -10px rgba(0, 0, 0, .7);
-	overflow-y: auto;
-	overflow-x: hidden;
-}
-#expand{
-	left:30%;
-	width: 0;
-}
-#expand .tip .close {
-	height: 20%;
+/*----content----*/
+#content{
+	position: fixed;
+	overflow: hidden;
+	overflow-y: auto !important;
 	top: 0;
+	right: 0;
+	height: 100%;
+	width: 0;
+	background: rgba(250, 250, 250, .6);
+	border: 1px solid rgba(250, 250, 250, 1);			
 }
-#list .tip .close {
-	width: 50%;
-}
-#list .tip .video {
-	width: 50%;
-	height: 50%;
-	left:50%;
+#content .close{
 	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 10px;
 }
-#list .tip .game {
-	width: 50%;
-	height: 25%;
-	left:50%;
-	top:50%;
+#content .close:hover{
+	background: rgba(250, 0, 0, .6);
+	/*border: 1px solid rgba(250, 0, 0, .6);*/
+}
+#content>div{
+	margin:5px 10px;
+	padding: 5px 10px;
+	background: rgba(250, 250, 250, .6);
+}
+#content .comment{
+	margin-left: 100px;
+	border: 1px dotted rgba(231, 24, 115, 1);
+}
+#content .leavemessage textarea{
+	width:100%;
+	height: 100px;
+	padding: 10px 80px 10px 10px;
+}
+#content .leavemessage .submit {
 	position: absolute;
-}
-#list .tip .words {
-	width: 50%;
-	height: 25%;
-	left:50%;
-	top:75%;
-	position: absolute;
-}
-#list ul,#expand ul {
-	padding: 5px;
-	margin: 0;
-	list-style: none;
-	list-style-image: none;		
-}
-#list li,#expand li {
-	min-height: 42px;
-	min-width: 480px;
-	display: block;
-	margin: 5px;
-	padding: 2px 5px;
-	color: rgb(51, 51, 51);
-	border: 1px solid rgb(255, 255, 255);
-	overflow: hidden;
-	background: rgba(255, 255, 255, .6);
-	opacity: 0;
-}
-.summary {
-	width: 90%;
-	float: left;
-}
-.more {
-	float: right;
+	width: 70px;
+	height: 70px;
+	right: 25px;
+	margin-top: 25px;
+	border: 1px solid rgb(102, 102, 102);
+	font-size: 35px;
+	text-align: center;
 	cursor: pointer;
-	margin: 5px;
-}
-/* article list end */
-
-#ball {
-	float: left;
-	width: 20px;
-	height: 20px;
-	background: rgba(138, 192, 7, 1);
-	color:white;
-	border-radius: 5px;
-	list-style: none;
-	list-style-image: none;
-	position:absolute;
-	z-index:999;
-	/*-webkit-transform:rotate(45deg);*/
-}
-#ball div{
-	padding: 5px 20px;
-	margin: 5px;			
-}
-.dragging{
-	-webkit-animation: operate 0.5s;
-}
-@-webkit-keyframes operate
-{
-	from {
-		-webkit-transform:rotate(0deg);
-	}
-	to {
-		-webkit-transform:rotate(360deg);
-	}
-}
-.drop{
-	background:#f90;
-}
-.search{
-	position:absolute;
-	top:0;
-	left: 100%;
-	width:0px;
-	height:0px;
-	border:1px solid #666;
-	z-index: 99;
-	background: rgba(255, 255, 255, 0.6);
-	box-sizing: border-box;
-	overflow: hidden;
-}
-.search input {
-	width: 350px;
-	height: 20px;
-	display: inline-block;
-}
-.submit {
-	border: 1px solid rgb(170, 170, 170);
-	padding: 2px;
-	line-height: 18px;
-	height: 20px;
-	cursor: pointer;
-	display: inline-block;
-}
-
-/* content */
-.time {
-	float: right;
-	margin: 5px;
-}
-.name {
-	float: left;
-	margin: 5px;
-}
-.word {
-	clear: left;
-	line-height: 1.5em;
-	font-size: 14px;
-	margin: 5px;
-}
-#list .hide,#list .to,#list .from,.to span,.from span {
-	display: none;
-}
-.from,.to{
-	cursor: pointer;
-}
-.from {
-	/*float: right;*/
-}
-.to {
-	float: right;
-}
-
-.search .content {
-	margin: 10px;
-}
-.relate{
-	clear: both;
 }
