--- a/css/scrollbar.css
+++ b/css/scrollbar.css
@@ -25,7 +25,7 @@
     background-clip:padding-box;
     background-color:rgba(0,0,0,.2);
     min-height:28px;
-    padding-top:100
+    padding-top:100px;
 }
 ::-webkit-scrollbar-thumb:hover {
     -webkit-box-shadow:inset 1px 1px 1px rgba(0,0,0,.25);
