--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,27 @@
 body {
 	margin:0;
 }
+/*----loading message----*/
+.loading {
+	border: 1px solid rgb(221, 221, 221);
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	margin-left: -50px;
+	padding: 10px 20px;
+	box-shadow: 0px 0px 6px rgb(221, 221, 221);
+	display:none;
+}
+/*----game folder link----*/
+#gameLink {
+	width: 20px;
+	height: 100%;
+	position: fixed;
+}
+#gameLink:hover {
+	background: rgba(26, 139, 200 ,.6);
+	border:1px solid rgb(26, 139, 200);
+}
 /*----menu face----*/
 #menu{
 	margin: 50px auto;
@@ -18,10 +39,12 @@ body {
 	float: left;
 
 	opacity:0;
+	filter:alpha(opacity=0);
 	-webkit-transition: all 1s ease-out;
 }
 .item:hover {
 	opacity:1;
+	filter:alpha(opacity=100);
 }
 .item:active {
 	-webkit-transform:scale(2);
@@ -95,19 +118,19 @@ body {
 /*----items color----*/
 .game{
 	background:rgba(123,23,219,.6);
-	border:1px solid rgba(123,23,219,1);			
+	border:1px solid rgb(123,23,219);			
 }
 .words,.word{
 	background: rgba(251, 186, 0, .6);
-	border: 1px solid rgba(251, 186, 0, 1);			
+	border: 1px solid rgb(251, 186, 0);			
 }
 .video{
 	background: rgba(0, 153, 204, .6);
-	border: 1px solid rgba(0, 153, 204, 1);			
+	border: 1px solid rgb(0, 153, 204);			
 }
 .article{
 	background: rgba(153, 204, 0, .6);
-	border: 1px solid rgba(153, 204, 0, 1);			
+	border: 1px solid rgb(153, 204, 0);			
 }		
 /*----filter items----*/
 #filter {
@@ -130,22 +153,26 @@ body {
 	border-width:5px;	
 }
 #filter input {
-	display: none;
+	opacity:0;
+	filter:alpha(opacity=0);
 }
 .filterItem{
 	opacity: 1;
+	filter:alpha(opacity=100);
 }
 /*----content----*/
 #content{
 	position: fixed;
 	overflow: hidden;
+	line-height: 2em;
 	overflow-y: auto !important;
 	top: 0;
 	right: 0;
 	height: 100%;
 	width: 0;
 	background: rgba(250, 250, 250, .6);
-	border: 1px solid rgba(250, 250, 250, 1);			
+	border: 1px solid rgb(250, 250, 250);
+	padding-bottom: 25px;	
 }
 #content .close{
 	position: absolute;
@@ -156,7 +183,7 @@ body {
 }
 #content .close:hover{
 	background: rgba(250, 0, 0, .6);
-	/*border: 1px solid rgba(250, 0, 0, .6);*/
+	border: 1px solid rgb(250, 0, 0);
 }
 #content>div{
 	margin:5px 10px;
@@ -165,7 +192,16 @@ body {
 }
 #content .comment{
 	margin-left: 100px;
-	border: 1px dotted rgba(231, 24, 115, 1);
+	border: 1px dotted rgb(231, 24, 115);
+}
+#content .save {
+	width: 20px;
+	height: 20px;
+	margin-top: -20px;
+	float: right;
+	background: rgba(250, 138, 12, .6);
+	border:1px solid rgb(250, 138, 12);
+	cursor:pointer;
 }
 #content .leavemessage textarea{
 	width:100%;
@@ -182,4 +218,29 @@ body {
 	font-size: 35px;
 	text-align: center;
 	cursor: pointer;
+	background: white;
+}
+/*----search----*/
+#search {
+	text-align: center;
+	border-top: 1px solid rgb(213, 78, 229);
+	text-align: center;
+	border-top: 1px solid rgb(213, 78, 229);
+	position: fixed;
+	width: 100%;
+	height: 30px;
+	bottom: 0;
+}
+#search select{
+	border: 0px solid;
+}
+#search input{
+	border: 0px solid;
+	border-bottom: 1px solid;
+	padding: 0 5px;
+	margin: 5px 10px;
+	background: none;
+}
+#search a{
+	cursor:pointer;
 }
